1.3alpha1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented ezcWorkflow::reset() to reset a workflow.
- Implemented issue #13182: ezcWorkflowNodeInput::execute() should check
  variable conditions.
- Implemented issue #13204: Implement ezcWorkflowConditionInArray.
- Fixed a warning in ezcWorkflowExecution::unsetVariable().


1.2 - Monday 16 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.2rc1 - Tuesday 10 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes


1.2beta1 - Tuesday 27 May 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented issue #12694: Replace reflection test for class type with SPL
  function.


1.2alpha1 - Monday 07 April 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented issue #10941: Support for the Cancel Case workflow pattern. The
  execution of a workflow can now be cancelled by either reaching a
  ezcWorkflowNodeCancel node or by calling the cancel() node on an
  ezcWorkflowExecution object. In either case, the execution is immediately
  halted, already activated nodes will not be executed.
- Implemented issue #12404: Separate file i/o from XML processing in
  ezcWorkflowDefinitionStorageXml.
- Implemented a plugin system that allows plugin developers to hook into
  various extension points in the workflow execution engine.
- The visualization visitor can now show the current state of a workflow in
  execution. This includes the highlighting of activated nodes as well as the
  contents of the workflow variables.
- The new execution visualizer plugin (ezcWorkflowExecutionVisualizerPlugin)
  uses the visualization visitor to create visualizations of each step of a
  workflow execution.


1.1 - Monday 17 December 2007